orchestra-compiler/tests/invalid_task_target_not_dict.mlir
// RUN: not %orchestra-opt %s --verify-diagnostics 2>&1 | %FileCheck %s

"orchestra.schedule"() ({
  // CHECK: error: 'orchestra.task' op requires 'target' attribute to be a dictionary
  "orchestra.task"() <{target = "not_a_dict"}> ({
    "orchestra.return"() : () -> ()
  }) : () -> ()
  "orchestra.return"() : () -> ()
}) : () -> ()
